Updated Database, Reworked Back/Frontend by Database, Prepared Noteshandler Merge